re PR bootstrap/44458 (Bootstrap fails on arm_float_words_big_endian implicit declaration when Ada on arm-linux)

2010-07-13  Laurent GUERBY  <laurent@guerby.net>

        PR bootstrap/44458
        * gcc-interface/targtyps.c: Include tm_p.h.
        * gcc-interface/Make-lang.in: Update dependencies.

From-SVN: r162146