gcc/ada/gcc-interface/targtyps.c
@@ -30,6 +30,7 @@
 #include "coretypes.h"
 #include "tree.h"
 #include "tm.h"
+#include "tm_p.h"
 
 #include "ada.h"
 #include "types.h"
